# email-wise

./: .eslintrc.cjs  .gitignore  js.Dockerfile  package.json  py.Dockerfile  shopify.app.emailwise.toml  shopify.app.toml  shopify.web.toml  tsconfig.json
app/: apollo.server.js  shopify.server.js
app/models/: EmailGenerator.js  EmailGenerator.server.js  Subscription.server.js  bull.js  celery.js
app/routes/: app._index.jsx  app.api.email.$shop.$id.jsx  app.billing.jsx  app.generators.$id.jsx  app.jsx  app.settings.jsx  app.stream.jsx  common.jsx  privacy.jsx  terms.jsx
copy/: email.md  product.txt
generator/: README.md  celeryconfig.py  pyproject.toml  requirements.txt  tasks.py  worker.py
generator/api/: __init__.py  sse.py  webhook.py
generator/generator/: anthropic.py  db.py  email_generator.py  groq.py  klaviyo.py  openai.py  prompts.py  settings.py
generator/nbs/: bullmq.ipynb  db.ipynb  groq.ipynb  groq_lama3.ipynb  klaviyo.ipynb  langgraph_rag_agent_llama3_local.ipynb  openai.ipynb  scratch.ipynb  streaming.ipynb  usw.ipynb
generator/scripts/: db_init.py  klaviyo_import.py
prisma/: schema.prisma
prisma/migrations/20240430141047_add_llm_email_tables/: migration.sql
prisma/migrations/20240501152254_move_shop_col/: migration.sql
prisma/migrations/20240501234558_add_move_private_keys/: migration.sql
prisma/migrations/20240504025843_init/: migration.sql
prisma/migrations/20240506002430_modify_email_table/: migration.sql
prisma/migrations/20240513203839_add_salt/: migration.sql
prod/: shopify.app.toml
stage/: README.md  shopify.app.toml
(+22 files in other folders)
