[tool.poetry]
name = "generator"
version = "0.1.0"
description = ""
authors = ["Christopher Kelly <cck197@cck197.net>"]
readme = "README.md"
packages = [{ include = "generator" }]

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
prisma = "^0.13.1"
pyright = "^1.1.361"
python-dotenv = "^1.0.1"
quart = "^0.19.5"
langchain-nomic = "^0.0.2"
langchain-community = "^0.0.36"
tiktoken = ">=0.6.0"
langchainhub = "^0.1.15"
langchain = "^0.1.17"
langgraph = "^0.0.44"
klaviyo-api = "^7.0.0"
beautifulsoup4 = "^4.12.3"
python-dateutil = "^2.9.0.post0"
langchain-groq = "^0.1.3"
langchain-anthropic = "^0.1.11"
quart-cors = "^0.7.0"
openai = "^1.30.1"
langchain-openai = "^0.1.7"
groq = "^0.6.0"
anthropic = "^0.26.0"
hypercorn = "^0.16.0"
bullmq = "^2.7.6"

[tool.poetry.scripts]
start = "api:run"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.1.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
